#212 implemented repository of playlist